derive/test/compile_fail/ref_multiple_lifetimes.stderr
error: cannot infer an appropriate lifetime for ValueRef: there are multiple lifetime parameters — specify which to use with #[sval(ref = "'lifetime")]
 --> compile_fail/ref_multiple_lifetimes.rs:3:10
  |
3 | #[derive(Value)]
  |          ^^^^^
  |
  = note: this error originates in the derive macro `Value` (in Nightly builds, run with -Z macro-backtrace for more info)
